Switch email verification to clickable confirmation link
